logo; minor fixes

--- a/index.ipynb
+++ b/index.ipynb
@@ -5,8 +5,28 @@
    "id": "46bec896-cd72-411f-b29c-5779ef42def5",
    "metadata": {},
    "source": [
+    "# Day 1\n",
+    "\n",
     "- [Statistical inference with count data](sessions/mle.ipynb)\n",
-    "- [Linear regression](sessions/linear_regression.ipynb)"
+    "- [Linear regression](sessions/linear_regression.ipynb)\n",
+    "- [Logistic regression](sessions/logistic_regression.ipynb)\n",
+    "- [Softmax regression](sessions/softmax_regression.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4ca53dfc-6ba3-4b57-86b3-170dc959ece9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "![Py4Eng](sessions/img/logo.png)\n",
+    "\n",
+    "# Data Science with Python\n",
+    "## [Yoav Ram](http://python.yoavram.com)\n",
+    "\n",
+    "http://python.yoavram.com\n",
+    "yoav@yoavram.com"
    ]
   }
  ],
