remove answer from ex

--- a/exercises/ridge.ipynb
+++ b/exercises/ridge.ipynb
@@ -92,7 +92,7 @@
    "source": [
     "def loss(W, X, Y, α=0):\n",
     "    ## your code  here\n",
-    "    return NLL(W, X, Y) + (α / (2 * X.shape[0])) * (W @ W)\n",
+    "    \n",
     "\n",
     "W = np.ones(X.shape[1])\n",
     "print(loss(W, X, Y, α=0), loss(W, X, Y, α=1), loss(W, X, Y, α=10))"
@@ -126,16 +126,7 @@
    "source": [
     "def fit_logistic(X, Y, α=0):\n",
     "    # your code here\n",
-    "    result = minimize(\n",
-    "        loss,\n",
-    "        x0=np.zeros(X.shape[1]),\n",
-    "        args=(X, Y, α), \n",
-    "        method='L-BFGS-B',\n",
-    "        jac=jax.grad(loss)\n",
-    "    )\n",
-    "    if not result.success:\n",
-    "        print(result.message)\n",
-    "    return result.x"
+    "    "
    ]
   },
   {
@@ -153,9 +144,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here\n",
-    "W0 = fit_logistic(X_train, Y_train, α=0)\n",
-    "W1 = fit_logistic(X_train, Y_train, α=1)"
+    "# your code here\n"
    ]
   },
   {
@@ -1089,14 +1078,6 @@
     "axes[1].set(title=r'$\\alpha$=1, Accuracy={:.4f}'.format(accuracy(W1, X_test, Y_test)), \n",
     "            xticks=range(W1.shape[0]));"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7ecb5ee1-6b99-4b47-8635-f8af17caabb0",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
