--- a/index.ipynb
+++ b/index.ipynb
@@ -2,6 +2,20 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "2c40e9e4-036c-4993-8543-9458a21c62df",
+   "metadata": {},
+   "source": [
+    "![](logo.png)\n",
+    "\n",
+    "# Introduction to Deep Learning\n",
+    "## [Yoav Ram](http://python.yoavram.com)\n",
+    "\n",
+    "http://python.yoavram.com\n",
+    "yoav@yoavram.com"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "46bec896-cd72-411f-b29c-5779ef42def5",
    "metadata": {},
    "source": [
@@ -14,19 +28,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4ca53dfc-6ba3-4b57-86b3-170dc959ece9",
+   "cell_type": "markdown",
+   "id": "4928cd6e-8ebe-42f6-a56d-15cf513bf6ba",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "![Py4Eng](sessions/img/logo.png)\n",
+    "## Exercises\n",
     "\n",
-    "# Data Science with Python\n",
-    "## [Yoav Ram](http://python.yoavram.com)\n",
-    "\n",
-    "http://python.yoavram.com\n",
-    "yoav@yoavram.com"
+    "- Linear model: [assignment](exercises/linear-anage.ipynb) | [solution](solutions/linear-anage.ipynb)\n",
+    "- Ridge regression: [assignment](exercises/ridge.ipynb) | [solution](solutions/ridge.ipynb)\n",
+    "- Object detection: only **Ex 1** in [assignment](exercises/sign-lang.ipynb) | [solution](solutions/sign-lang.ipynb)"
    ]
   }
  ],
