--- a/index.ipynb
+++ b/index.ipynb
@@ -23,8 +23,7 @@
     "\n",
     "- [Statistical inference with count data](sessions/mle.ipynb)\n",
     "- [Linear regression](sessions/linear_regression.ipynb)\n",
-    "- [Logistic regression](sessions/logistic_regression.ipynb)\n",
-    "- [Softmax regression](sessions/softmax_regression.ipynb)"
+    "- [Logistic regression](sessions/logistic_regression.ipynb)"
    ]
   },
   {
@@ -37,6 +36,55 @@
     "- Linear model: [assignment](exercises/linear-anage.ipynb) | [solution](solutions/linear-anage.ipynb)\n",
     "- Ridge regression: [assignment](exercises/ridge.ipynb) | [solution](solutions/ridge.ipynb)\n",
     "- Object detection: only **Ex 1** in [assignment](exercises/sign-lang.ipynb) | [solution](solutions/sign-lang.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "323d53ef-72ee-44fa-92e7-69ed45e13088",
+   "metadata": {},
+   "source": [
+    "# Day 2\n",
+    "- [Softmax regression](sessions/softmax_regression.ipynb)\n",
+    "- [Feed forward networks](sessions/FFN.ipynb)\n",
+    "- [Feed forward networks with Keras](sessions/K_FFN.ipynb)\n",
+    "- [Recurrent neural networks](sessions/RNN.ipynb)\n",
+    "\n",
+    "## Exercises\n",
+    "- [Long Short Term Memory](exercises/LSTM.ipynb) | [solution](solutions/LSTM.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c43dbc7c-d799-4ff6-8e99-6deecbb782b5",
+   "metadata": {},
+   "source": [
+    "# Day 3\n",
+    "- [Convolutional neural networks](sessions/K_CNN.ipynb)\n",
+    "- [Convolutional neural networks with spectral data](sessions/audio.ipynb)\n",
+    "- [Pretrained models and transfer learning](sessions/pretrained.ipynb)\n",
+    "\n",
+    "## Exercises\n",
+    "- [CNN on MNIST Fashion](exercises/CNN.ipynb) | [solution](exercises/CNN.ipynb)\n",
+    "- [CNN with time series data](exercises/CNN_timeseries.ipynb) | [solution](solutions/CNN_timeseries.ipynb)\n",
+    "- [CNN regression with audio data](exercises/audio.ipynb) | [solution](solutions/audio.ipynb)\n",
+    "- [Sign language classificaiton: Ex 2](exercises/sign-lang.ipynb) | [solutions/sign-lang.ipynb)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "03549e8d-1259-4ced-b0d8-a54521504e89",
+   "metadata": {},
+   "source": [
+    "# Day 4\n",
+    "- [Keras functional API](sessions/functional_keras.ipynb)\n",
+    "- [Autoencoders](sessions/autoencoders.ipynb)\n",
+    "- [Generative adversarial networks](sessions/GAN.ipynb)\n",
+    "- [Transformers](sessions/transformer.ipynb)\n",
+    "- [Density estimation](sessions/density-estimation.ipynb)\n",
+    "\n",
+    "## Exercises\n",
+    "- [Simple GAN](exercises/GAN.ipynb) | [solution](solutions/GAN.ipynb)\n",
+    "- [Auxilary Classifier Generative adversarial networks](exercises/ACGAN.ipynb) | [solution](solutions/ACGAN.ipynb)\n"
    ]
   }
  ],
