--- a/index.ipynb
+++ b/index.ipynb
@@ -23,7 +23,8 @@
     "\n",
     "- [Statistical inference with count data](sessions/mle.ipynb)\n",
     "- [Linear regression](sessions/linear_regression.ipynb)\n",
-    "- [Logistic regression](sessions/logistic_regression.ipynb)"
+    "- [Logistic regression](sessions/logistic_regression.ipynb)\n",
+    "- [Robust regression](sessions/robust-regression.ipynb) "
    ]
   },
   {
