--- a/index.ipynb
+++ b/index.ipynb
@@ -23,8 +23,7 @@
     "\n",
     "- [Statistical inference with count data](sessions/mle.ipynb)\n",
     "- [Linear regression](sessions/linear_regression.ipynb)\n",
-    "- [Logistic regression](sessions/logistic_regression.ipynb)\n",
-    "- [Robust regression](sessions/robust-regression.ipynb) "
+    "- [Logistic regression](sessions/logistic_regression.ipynb)"
    ]
   },
   {
@@ -45,13 +44,15 @@
    "metadata": {},
    "source": [
     "# Day 2\n",
+    "- [Robust regression](sessions/robust-regression.ipynb)\n",
+    "- [Gamma regression](sessions/gamma_regression.ipynb)\n",
     "- [Softmax regression](sessions/softmax_regression.ipynb)\n",
     "- [Feed forward networks](sessions/FFN.ipynb)\n",
     "- [Feed forward networks with Keras](sessions/K_FFN.ipynb)\n",
-    "- [Recurrent neural networks](sessions/RNN.ipynb)\n",
     "\n",
     "## Exercises\n",
-    "- [Long Short Term Memory](exercises/LSTM.ipynb) | [solution](solutions/LSTM.ipynb)"
+    "- Extend FFN to more than two layers\n",
+    "- Apply FFN to another dataset."
    ]
   },
   {
@@ -63,12 +64,14 @@
     "- [Convolutional neural networks](sessions/K_CNN.ipynb)\n",
     "- [Convolutional neural networks with spectral data](sessions/audio.ipynb)\n",
     "- [Pretrained models and transfer learning](sessions/pretrained.ipynb)\n",
+    "- [Recurrent neural networks](sessions/RNN.ipynb)\n",
     "\n",
     "## Exercises\n",
     "- [CNN on MNIST Fashion](exercises/CNN.ipynb) | [solution](exercises/CNN.ipynb)\n",
     "- [CNN with time series data](exercises/CNN_timeseries.ipynb) | [solution](solutions/CNN_timeseries.ipynb)\n",
     "- [CNN regression with audio data](exercises/audio.ipynb) | [solution](solutions/audio.ipynb)\n",
-    "- [Sign language classificaiton: Ex 2](exercises/sign-lang.ipynb) | [solutions/sign-lang.ipynb)\n"
+    "- [Sign language classificaiton: Ex 2](exercises/sign-lang.ipynb) | [solutions/sign-lang.ipynb)\n",
+    "- [Long Short Term Memory](exercises/LSTM.ipynb) | [solution](solutions/LSTM.ipynb)"
    ]
   },
   {
