--- a/index.ipynb
+++ b/index.ipynb
@@ -70,7 +70,7 @@
     "- [CNN on MNIST Fashion](exercises/CNN.ipynb) | [solution](exercises/CNN.ipynb)\n",
     "- [CNN with time series data](exercises/CNN_timeseries.ipynb) | [solution](solutions/CNN_timeseries.ipynb)\n",
     "- [CNN regression with audio data](exercises/audio.ipynb) | [solution](solutions/audio.ipynb)\n",
-    "- [Sign language classificaiton: Ex 2](exercises/sign-lang.ipynb) | [solutions/sign-lang.ipynb)\n",
+    "- [Sign language classificaiton: Ex 2](exercises/sign-lang.ipynb) | [solution](solutions/sign-lang.ipynb)\n",
     "- [Long Short Term Memory](exercises/LSTM.ipynb) | [solution](solutions/LSTM.ipynb)"
    ]
   },
