keras 3 with jax (no tf); revise

--- a/index.ipynb
+++ b/index.ipynb
@@ -50,8 +50,7 @@
     "- [Feed forward networks](sessions/FFN.ipynb)\n",
     "\n",
     "## Exercises\n",
-    "- Extend FFN to more than two layers\n",
-    "- Apply FFN to another dataset."
+    "- Extend FFN to more than two layers"
    ]
   },
   {
@@ -60,18 +59,16 @@
    "metadata": {},
    "source": [
     "# Day 3\n",
-    "- [Feed forward networks with Keras](sessions/K_FFN.ipynb)\n",
+    "- [Feed forward networks with Keras](sessions/K_FFN.ipynb) | [solution](solutions/K_FFN.ipynb)\n",
     "- [Convolutional neural networks](sessions/K_CNN.ipynb)\n",
-    "- [Convolutional neural networks with spectral data](sessions/audio.ipynb)\n",
+    "- [Convolutional neural networks with audio data](sessions/audio.ipynb)\n",
     "- [Pretrained models and transfer learning](sessions/pretrained.ipynb)\n",
-    "- [Recurrent neural networks](sessions/RNN.ipynb)\n",
     "\n",
     "## Exercises\n",
-    "- [CNN on MNIST Fashion](exercises/CNN.ipynb) | [solution](exercises/CNN.ipynb)\n",
+    "- [CNN on MNIST Fashion](exercises/CNN.ipynb) | [solution](solutions/CNN.ipynb)\n",
     "- [CNN with time series data](exercises/CNN_timeseries.ipynb) | [solution](solutions/CNN_timeseries.ipynb)\n",
     "- [CNN regression with audio data](exercises/audio.ipynb) | [solution](solutions/audio.ipynb)\n",
-    "- [Sign language classificaiton: Ex 2](exercises/sign-lang.ipynb) | [solution](solutions/sign-lang.ipynb)\n",
-    "- [Long Short Term Memory](exercises/LSTM.ipynb) | [solution](solutions/LSTM.ipynb)"
+    "- [Sign language classificaiton: Ex 2](exercises/sign-lang.ipynb) | [solution](solutions/sign-lang.ipynb)\n"
    ]
   },
   {
@@ -80,6 +77,7 @@
    "metadata": {},
    "source": [
     "# Day 4\n",
+    "- [Recurrent neural networks](sessions/RNN.ipynb)\n",
     "- [Keras functional API](sessions/functional_keras.ipynb)\n",
     "- [Autoencoders](sessions/autoencoders.ipynb)\n",
     "- [Generative adversarial networks](sessions/GAN.ipynb)\n",
@@ -87,6 +85,7 @@
     "- [Density estimation](sessions/density-estimation.ipynb)\n",
     "\n",
     "## Exercises\n",
+    "- [Long Short Term Memory](exercises/LSTM.ipynb) | [solution](solutions/LSTM.ipynb)\n",
     "- [Simple GAN](exercises/GAN.ipynb) | [solution](solutions/GAN.ipynb)\n",
     "- [Auxilary Classifier Generative adversarial networks](exercises/ACGAN.ipynb) | [solution](solutions/ACGAN.ipynb)\n"
    ]
