--- a/solutions/LSTM.ipynb
+++ b/solutions/LSTM.ipynb
@@ -13,31 +13,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Keras 2.13.1\n",
-      "GPU: []\n",
-      "\n"
+      "Keras: 3.6.0 backend: jax cpu\n"
      ]
     }
    ],
    "source": [
     "%matplotlib inline\n",
     "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
-    "import tensorflow as tf\n",
-    "try:\n",
-    "    import keras\n",
-    "except ModuleNotFoundError:\n",
-    "    from tensorflow import keras\n",
-    "print('Keras', keras.__version__)\n",
-    "print('GPU:', tf.config.list_physical_devices('GPU'))\n",
-    "print(tf.test.gpu_device_name())"
+    "import pickle\n",
+    "import jax.numpy as np\n",
+    "import jax\n",
+    "import keras\n",
+    "print('Keras:', keras.__version__, 'backend:', keras.backend.backend(), jax.default_backend())"
    ]
   },
   {
@@ -49,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,19 +122,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "# sequences: 102727\n",
-      "Title: Gulliver's Travels\n",
-      "       Into Se -> v\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "seq_length = 40\n",
     "step = 3\n",
@@ -158,8 +142,8 @@
     "\n",
     "for i, seq in enumerate(sequences):\n",
     "    for t, char in enumerate(seq):\n",
-    "        X[i, t, char_to_id[char]] = 1\n",
-    "    Y[i, char_to_id[next_chars[i]]] = 1"
+    "        X.at[i, t, char_to_id[char]].set(1)\n",
+    "    Y.at[i, char_to_id[next_chars[i]]].set(1)"
    ]
   },
   {
@@ -173,34 +157,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Model: \"sequential\"\n",
-      "_________________________________________________________________\n",
-      " Layer (type)                Output Shape              Param #   \n",
-      "=================================================================\n",
-      " lstm (LSTM)                 (None, None, 128)         109568    \n",
-      "                                                                 \n",
-      " lstm_1 (LSTM)               (None, 32)                20608     \n",
-      "                                                                 \n",
-      " dense (Dense)               (None, 85)                2805      \n",
-      "                                                                 \n",
-      "=================================================================\n",
-      "Total params: 132981 (519.46 KB)\n",
-      "Trainable params: 132981 (519.46 KB)\n",
-      "Non-trainable params: 0 (0.00 Byte)\n",
-      "_________________________________________________________________\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "layers = [\n",
-    "    keras.layers.LSTM(128, return_sequences=True, input_shape=(None, vocab_size)),\n",
+    "    keras.Input((None, vocab_size)),\n",
+    "    keras.layers.LSTM(128, return_sequences=True),\n",
     "    keras.layers.LSTM(32),\n",
     "    keras.layers.Dense(vocab_size, activation='softmax')\n",
     "]\n",
@@ -217,13 +180,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "model.compile(\n",
-    "    loss=keras.losses.categorical_crossentropy,\n",
-    "    optimizer=keras.optimizers.Adam(), \n",
+    "    loss='categorical_crossentropy',\n",
+    "    optimizer='adam', \n",
     "    metrics=['accuracy']\n",
     ")"
    ]
@@ -563,7 +526,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
