--- a/solutions/audio.ipynb
+++ b/solutions/audio.ipynb
@@ -2,9 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "# Emotion in speech\n",
     "\n",
@@ -13,7 +11,7 @@
     "Each audio clip has two associated values between -1 and 1, one for _arousal_ and one for _valence_, in the corresponding CSV files.\n",
     "\n",
     "**Note**: We'll use the [librosa](https://librosa.github.io) package to process spectral data.\n",
-    "You should have it installed, but if you get an `ImportError` then please run the following command in a new cell: `python3 .7-m pip install  librosa`."
+    "You should have it installed, but if you get an `ImportError` then please run the following command in a new cell: `!pip install  librosa`."
    ]
   },
   {
