--- a/exercises/LSTM.ipynb
+++ b/exercises/LSTM.ipynb
@@ -13,17 +13,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tensorflow: 2.13.1\n",
-      "Keras: 2.13.1\n",
-      "GPU: []\n",
-      "\n"
+      "Keras: 3.6.0 backend: jax cpu\n"
      ]
     }
    ],
@@ -31,15 +28,10 @@
     "%matplotlib inline\n",
     "import matplotlib.pyplot as plt\n",
     "import pickle\n",
-    "import numpy as np\n",
-    "\n",
-    "import tensorflow as tf\n",
+    "import jax.numpy as np\n",
+    "import jax\n",
     "import keras\n",
-    "\n",
-    "print('Tensorflow:', tf.__version__)    \n",
-    "print('Keras:', keras.__version__)\n",
-    "print('GPU:', tf.config.list_physical_devices('GPU'))\n",
-    "print(tf.test.gpu_device_name())"
+    "print('Keras:', keras.__version__, 'backend:', keras.backend.backend(), jax.default_backend())"
    ]
   },
   {
@@ -130,19 +122,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "# sequences: 102727\n",
-      "Title: Gulliver's Travels\n",
-      "       Into Se -> v\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "seq_length = 40\n",
     "step = 3\n",
@@ -160,8 +142,8 @@
     "\n",
     "for i, seq in enumerate(sequences):\n",
     "    for t, char in enumerate(seq):\n",
-    "        X[i, t, char_to_id[char]] = 1\n",
-    "    Y[i, char_to_id[next_chars[i]]] = 1"
+    "        X.at[i, t, char_to_id[char]].set(1)\n",
+    "    Y.at[i, char_to_id[next_chars[i]]].set(1)"
    ]
   },
   {
@@ -394,7 +376,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
