--- a/solutions/K_FFN.ipynb
+++ b/solutions/K_FFN.ipynb
@@ -6,12 +6,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = keras.models.Sequential([\n",
-    "    keras.layers.Flatten(input_shape=(width, height)),\n",
-    "    keras.layers.Dense(100, activation='relu'),\n",
-    "    keras.layers.Dropout(0.5),s\n",
-    "    keras.layers.Dense(ncats, activation='softmax')\n",
-    "])"
+    "layers = [\n",
+    "    keras.Input((width, height)),\n",
+    "    keras.layers.Flatten(),\n",
+    "    keras.layers.Dense(100, activation='relu', use_bias=False),\n",
+    "    keras.layers.Dropout(0.5),\n",
+    "    keras.layers.Dense(ncats, activation='softmax', use_bias=False)\n",
+    "]\n",
+    "model = keras.models.Sequential(layers)\n",
+    "model.summary()"
    ]
   },
   {
@@ -45,9 +48,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python [conda env:DataSciPy]",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-DataSciPy-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -59,7 +62,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
