--- a/index.ipynb
+++ b/index.ipynb
@@ -61,12 +61,12 @@
     "# Day 3\n",
     "- [Feed forward networks with Keras](sessions/K_FFN.ipynb) | [solution](solutions/K_FFN.ipynb)\n",
     "- [Convolutional neural networks](sessions/K_CNN.ipynb)\n",
-    "- [Convolutional neural networks with audio data](sessions/audio.ipynb)\n",
     "- [Pretrained models and transfer learning](sessions/pretrained.ipynb)\n",
+    "- [CNN with time series data](sessions/CNN_timeseries.ipynb)\n",
+    "- [Convolutional neural networks with audio data](sessions/audio.ipynb)\n",
     "\n",
     "## Exercises\n",
     "- [CNN on MNIST Fashion](exercises/CNN.ipynb) | [solution](solutions/CNN.ipynb)\n",
-    "- [CNN with time series data](exercises/CNN_timeseries.ipynb) | [solution](solutions/CNN_timeseries.ipynb)\n",
     "- [CNN regression with audio data](exercises/audio.ipynb) | [solution](solutions/audio.ipynb)\n",
     "- [Sign language classificaiton: Ex 2](exercises/sign-lang.ipynb) | [solution](solutions/sign-lang.ipynb)\n"
    ]
