--- a/exercises/LSTM.ipynb
+++ b/exercises/LSTM.ipynb
@@ -20,7 +20,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Keras: 3.6.0 backend: jax cpu\n"
+      "Keras: 3.7.0 backend: jax cpu\n"
      ]
     }
    ],
@@ -29,6 +29,7 @@
     "import matplotlib.pyplot as plt\n",
     "import pickle\n",
     "import jax.numpy as np\n",
+    "import numpy as onp \n",
     "import jax\n",
     "import keras\n",
     "print('Keras:', keras.__version__, 'backend:', keras.backend.backend(), jax.default_backend())"
@@ -43,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,9 +123,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "# sequences: 102727\n",
+      "Title: Gulliver's Travels\n",
+      "       Into Se -> v\n"
+     ]
+    }
+   ],
    "source": [
     "seq_length = 40\n",
     "step = 3\n",
@@ -135,15 +146,24 @@
     "    next_chars.append(text[i + seq_length])\n",
     "n_sequences = len(sequences)\n",
     "print('# sequences:', n_sequences)\n",
-    "print(sequences[0], '->', next_chars[0])\n",
-    "\n",
-    "X = np.zeros((n_sequences, seq_length, vocab_size), dtype=bool)\n",
-    "Y = np.zeros((n_sequences, vocab_size), dtype=bool)\n",
+    "print(sequences[0], '->', next_chars[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = onp.zeros((n_sequences, seq_length, vocab_size))\n",
+    "Y = onp.zeros((n_sequences, vocab_size)) \n",
     "\n",
     "for i, seq in enumerate(sequences):\n",
     "    for t, char in enumerate(seq):\n",
-    "        X.at[i, t, char_to_id[char]].set(1)\n",
-    "    Y.at[i, char_to_id[next_chars[i]]].set(1)"
+    "        X[i, t, char_to_id[char]] = 1 \n",
+    "    Y[i, char_to_id[next_chars[i]]] = 1 \n",
+    "X = np.array(X) \n",
+    "Y = np.array(Y)"
    ]
   },
   {
